added info-button project

--- a/index.html
+++ b/index.html
@@ -166,6 +166,19 @@
     </div>
   </li>
 
+  <li>
+    <div class="title">Information Button</div>
+    <div class="desc">
+      A customizable Javascript file that automatically adds an button 
+      in the top-right corner of a webpage, which opens an overlay 
+      that displays information in a dialog box.
+    </div>
+    <div class="links">
+      <a href="https://innovation-adelphiu.github.io/info-button/">🌐 Open App</a> ·
+      <a href="https://github.com/innovation-adelphiu/info-button">💻 View Code</a>
+    </div>
+  </li>
+
 </ul>
 
 </body>
