update link style

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
         text-align: justify;
     }
 
-    a         { color:#88aaff }
+    a         { color:#88aaff; font-size: 1.2em; }
     a:visited { color:#88aaff }
-    a:hover   { color:#ff9988; }
+    a:hover   { color:#ff9999; }
 
     .project-list {
     list-style-type: disc;
@@ -75,7 +75,7 @@
     }
 
     .project-list .title {
-    font-size: 1.1em;
+    font-size: 1.2em;
     font-weight: 600;
     margin-bottom: 0.25em;
     }
@@ -85,15 +85,6 @@
     line-height: 1.4;
     }
 
-    .project-list .links a {
-    color: #0366d6; /* GitHub blue */
-    text-decoration: none;
-    font-size: 0.95em;
-    }
-
-    .project-list .links a:hover {
-    text-decoration: underline;
-    }
 
     </style>
 </head>
@@ -139,8 +130,8 @@
       A website that generates QR codes, with optional text above and below, and exports to an image or PDF file.
     </div>
     <div class="links">
-      <a href="https://innovation-adelphiu.github.io/qr-code-generator/">🌐 Open App</a> ·
-      <a href="https://github.com/innovation-adelphiu/qr-code-generator">💻 View Code</a>
+      <a href="https://innovation-adelphiu.github.io/qr-code-generator/">🌐 Open App 🌐</a> &bull;
+      <a href="https://github.com/innovation-adelphiu/qr-code-generator">💻 View Code 💻</a>
     </div>
   </li>
 
@@ -150,8 +141,8 @@
       A web-based task manager. Tasks are saved automatically using local browser storage.
     </div>
     <div class="links">
-      <a href="https://innovation-adelphiu.github.io/task-list/">🌐 Open App</a> ·
-      <a href="https://github.com/innovation-adelphiu/task-list">💻 View Code</a>
+      <a href="https://innovation-adelphiu.github.io/task-list/">🌐 Open App 🌐</a> &bull;
+      <a href="https://github.com/innovation-adelphiu/task-list">💻 View Code 💻</a>
     </div>
   </li>
 
@@ -161,8 +152,8 @@
       A minimalist web-based countdown timer with an animated circular progress ring.
     </div>
     <div class="links">
-      <a href="https://innovation-adelphiu.github.io/timer/">🌐 Open App</a> ·
-      <a href="https://github.com/innovation-adelphiu/timer">💻 View Code</a>
+      <a href="https://innovation-adelphiu.github.io/timer/">🌐 Open App 🌐</a> &bull;
+      <a href="https://github.com/innovation-adelphiu/timer">💻 View Code 💻</a> 
     </div>
   </li>
 
@@ -174,8 +165,8 @@
       that displays information in a dialog box.
     </div>
     <div class="links">
-      <a href="https://innovation-adelphiu.github.io/info-button/">🌐 Open App</a> ·
-      <a href="https://github.com/innovation-adelphiu/info-button">💻 View Code</a>
+      <a href="https://innovation-adelphiu.github.io/info-button/">🌐 Open App 🌐</a> &bull;
+      <a href="https://github.com/innovation-adelphiu/info-button">💻 View Code 💻</a>
     </div>
   </li>
 
