add white noise generator project

--- a/index.html
+++ b/index.html
@@ -158,6 +158,18 @@
   </li>
 
   <li>
+    <div class="title">White Noise Generator</div>
+    <div class="desc">
+      A simple web-based noise generator that produces white, pink, or brown noise in real time.
+    </div>
+    <div class="links">
+      <a href="https://innovation-adelphiu.github.io/white-noise-generator/">🌐 Open App 🌐</a> &bull;
+      <a href="https://github.com/innovation-adelphiu/white-noise-generator">💻 View Code 💻</a>
+    </div>
+  </li>
+
+
+  <li>
     <div class="title">Information Button</div>
     <div class="desc">
       A customizable Javascript file that automatically adds an button 
