added new projects

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     line-height: 1.4;
     }
 
-
+    
     </style>
 </head>
 <body>
@@ -95,7 +95,7 @@
     <div class="title center" style="padding-left: 24px;">
         Adelphi University Innovation Center
         <br>
-        <a href="https://github.com/innovation-adelphiu" target="_blank">innovation-adelphiu @ GitHub</a>
+        Software Application Collection
     </div>
 </div>
 
@@ -118,6 +118,16 @@
     and to release their source code freely 
     as open-source contributions 
     for the benefit of the software development community.
+</div>
+
+<br>
+
+<div class="paragraph">
+    Please note that the applications showcased below were primarily designed
+    for use on desktop computers, and may not work as well on mobile devices.
+    Also note that there are additional projects hosted on the 
+    <a href="https://github.com/innovation-adelphiu" target="_blank">GitHub repository</a>
+    of a more technical nature that may be of interest to software developers.
 </div>
 
 <div class="header">Projects</div>
@@ -170,15 +180,26 @@
 
 
   <li>
-    <div class="title">Information Button</div>
+    <div class="title">Rain Soundscape</div>
     <div class="desc">
-      A customizable Javascript file that automatically adds an button 
-      in the top-right corner of a webpage, which opens an overlay 
-      that displays information in a dialog box.
+      A calming rain-and-thunder sound mixer you can customize with interactive volume controls.
     </div>
     <div class="links">
-      <a href="https://innovation-adelphiu.github.io/info-button/">🌐 Open App 🌐</a> &bull;
-      <a href="https://github.com/innovation-adelphiu/info-button">💻 View Code 💻</a>
+      <a href="https://innovation-adelphiu.github.io/rain-soundscape/">🌐 Open App 🌐</a> &bull;
+      <a href="https://github.com/innovation-adelphiu/rain-soundscape">💻 View Code 💻</a>
+    </div>
+  </li>
+
+
+  <li>
+    <div class="title">Rain Landscape</div>
+    <div class="desc">
+      An animated scene featuring swirling and drifting clouds, 
+      falling rain, a mountain background, and customizable ambient rain and thunder sounds.
+    </div>
+    <div class="links">
+      <a href="https://innovation-adelphiu.github.io/rain-landscape/">🌐 Open App 🌐</a> &bull;
+      <a href="https://github.com/innovation-adelphiu/rain-landscape">💻 View Code 💻</a>
     </div>
   </li>
 
