--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         display: flex;
         justify-content: center;  /* center horizontally */
         align-items: center;      /* center vertically */
+        text-align: center;
         flex-direction: column;   /* stack the two lines vertically */
 
     }
@@ -85,7 +86,7 @@
     line-height: 1.4;
     }
 
-    
+
     </style>
 </head>
 <body>
